package org.totalgrid.reef.api.proto.ProcessStatus;

option java_package = "org.totalgrid.reef.api.proto";
import "Model.proto";

message StatusSnapshot {
  optional string process_id     = 1;
  optional string instance_name = 2;
  optional bool online = 3;
  optional uint64 time = 4 [default = 0];
}